--- a/popUpUIVIewTest/popUpViewController.xib
+++ b/popUpUIVIewTest/popUpViewController.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="popUpViewController" customModule="popUpUIVIewTest" customModuleProvider="target">
             <connections>
-                <outlet property="closePopUpDialog" destination="97F-6M-Ze0" id="lV2-nb-KT4"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="6fy-Vg-6nJ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,7 +26,7 @@
                                         <color key="titleColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
                                     <connections>
-                                        <action selector="closePopUpDialog:" destination="-1" eventType="touchUpInside" id="8Rb-Xh-t7k"/>
+                                        <action selector="closePopUpDialog:" destination="-1" eventType="touchUpInside" id="TlV-OK-IoV"/>
                                     </connections>
                                 </button>
                             </subviews>
